--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.thymeleaf.cache=false
  #SMTP EMAIL
 spring.mail.host =smtp.gmail.com
 spring.mail.username =ichefsite10@gmail.com
-spring.mail.password =Ichef@site10
+spring.mail.password =
 spring.mail.port =587
 spring.mail.properties.mail.smtp.auth =true
 spring.mail.properties.mail.smtp.starttls.enable =true
